# Notebook-X

./: .gitignore  Makefile  README.md  index.html  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yaml  publish.yaml
app/: __init__.py
app/blueprints/: files.py  home.py  kernel.py
app/static/css/: index.css  notebook.css
app/static/js/: main.js  notebook.js  script.js
app/templates/: base.html  home.html  notebook.html
app/templates/errors/: error.html
config/: custom.css
frontend/: package.json  tsconfig.json  webpack.config.js
frontend/src/: app.ts  commonmark.d.ts  file.ts  notebook.ts  store.ts  tree.ts  types.ts
frontend/src/cells/: base.ts  code.ts  markdown.ts
frontend/src/components/: api.ts  notebook.ts
frontend/src/notebook/: actions.ts  create.ts  events.ts  index.ts  render.ts  shortcuts.ts
frontend/src/styles/: editor-file.css  editor-notebook.css  editor.css  index.css  main.css  markdown.css  notebook.css  root.css  toolbar.css  tree.css  ui.css
frontend/src/themes/: base.ts  gruvbox.ts  index.ts
frontend/src/tree/: index.ts  tree.ts  utils.ts
frontend/src/utils/: api.ts  dom.ts  index.ts
server/: run.py
server/src/: server.py
server/src/handlers/: file_handler.py  kernel_handler.py  notebook_handler.py  packages_handler.py  runningkernels.py  websocket_handler.py
server/src/managers/: kernel_manager.py  session_manager.py
server/src/utils/: excluded_dirs.py  help.py
server/templates/: base.html  error.html  file.html  home.html  notebook.html  running.html  toolbar.html
(+9 files in other folders)
